--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.0",
     "frontend": "file:",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.474.0",
+    "mapbox-gl": "^3.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
+    "react-map-gl": "^7.1.9",
     "react-router-dom": "^7.1.5",
     "tailwindcss": "^4.0.0"
   },
