--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.0",
+    "axios": "^1.7.9",
     "frontend": "file:",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.474.0",
