--- a/backend/server/requirements.txt
+++ b/backend/server/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.8.1
+certifi==2025.1.31
 Django==5.1.5
 django-cors-headers==4.6.0
 djangorestframework==3.15.2
@@ -6,5 +7,9 @@ djangorestframework_simplejwt==5.4.0
 gis==0.2.1
 psycopg2==2.9.10
 PyJWT==2.10.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+six==1.17.0
 sqlparse==0.5.3
+typing_extensions==4.12.2
+urllib3==2.3.0
